fix project description not showing up

--- a/src/css/ProjectGrid.css
+++ b/src/css/ProjectGrid.css
@@ -34,11 +34,11 @@
   transition: 0.5s;
 }
 
+.ProjectGrid-para {
+  align-self: flex-start;
+}
+
 a {
   color: yellow;
   font-weight: bold;
-}
-
-p {
-  align-self: flex-start;
 }
